force-app/main/default/objects/RCC_Import_Record__c/RCC_Import_Record__c.object-meta.xml
<CustomObject>
    <description>Staging record for each row in an RCC card import batch file. Processed by RCCCardBatchProcessor.</description>
    <label>RCC Import Record</label>
    <nameField>
        <displayFormat>RCC-{0000000}</displayFormat>
        <label>RCC Import Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCC Import Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>