force-app/main/default/objects/RCC_Import_Record__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>