force-app/main/default/objects/RCC_Import_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RCC Import Records</relationshipLabel>
    <relationshipName>RCC_Import_Records</relationshipName>
    <type>Lookup</type>
</CustomField>