force-app/main/default/objects/RCC_Import_Record__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>254</length>
    <type>Email</type>
</CustomField>