force-app/main/default/objects/RCC_Import_Record__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>