force-app/main/default/objects/RCC_Import_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Matched</fullName><default>false</default><label>Matched</label></value>
            <value><fullName>Enrolled</fullName><default>false</default><label>Enrolled</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>